@@ -1,5 +1,13 @@
 This is the CHANGELOG for amavisd-milter.
 
+20080310:
+	Convert CRLF to LF in mail body, because sendmail send always CRLF,
+	but amavisd-new requires that a message on a temporary file is in
+	a native text format of a host's file system, i.e. with LF terminated
+	lines on Unix or Linux.
+	Thanks to: David Schweikert <david@schweikert.ch> and Mark Martinec
+	<Mark.Martinec@ijs.si>
+
 20070923:
 	amavisd-milter-1.3.1
 
@@ -288,4 +296,4 @@ This is the CHANGELOG for amavisd-milter.
 	First public release.  Fully tested on FreeBSD 5.3.
 
 
-$Id: CHANGES,v 1.52 2007/09/23 17:29:05 reho Exp $
+$Id: CHANGES,v 1.53 2007/09/23 18:56:09 reho Exp $
